project1/test/test_11712639_4.out
Error type B at Line 3: Missing specifier
Error type B at Line 7: Missing Specifier and FunDec
