project1/test/test_11712639_4.spl
struct node{
    int b = 1;
    a = 10;
};
{
    float f = 0.1;
}